--- a/style.css
+++ b/style.css
@@ -210,46 +210,48 @@ th {
 
 @media screen and (max-width: 360px) {
 
-    body {
-        overflow-x: hidden;
-        box-sizing: border-box;
-
-    }
+    body {}
 
     .container {
-        grid-template-columns: 300px;
-        width: 300px;
         overflow-x: hidden;
-
         transition-duration: 1s;
-
-
     }
 
     /* for left side bar */
     #sideBar {
 
-        grid-column-start: 1;
-        grid-column-end: 2;
         grid-row-start: 1;
         grid-row-end: 2;
-        width: 300px;
+
+        grid-column-end: 1;
+        grid-column-end: 3;
+
+        width: 340px;
+
     }
 
     /* for main content 1 */
     #mainContent1 {
 
-        grid-template-columns: 300px;
-        width: 300px;
-
-        grid-column-start: 1;
-        grid-column-end: 2;
-
         grid-row-start: 2;
         grid-row-end: 3;
+
+        grid-column-end: 1;
+        grid-column-end: 3;
+
+        width: 340px;
+
+        margin-left: -85px;
+
     }
 
     #text {
+
+        grid-row-start: 1;
+        grid-row-end: 2;
+
+        grid-column-start: 1;
+        grid-column-end: 3;
         grid-row-gap: 50px;
     }
 
@@ -260,127 +262,36 @@ th {
     #btn_1st_content {}
 
     #image {
-        width: 300px;
+        grid-row-start: 2;
+        grid-row-end: 3;
+
+        grid-column-start: 1;
+        grid-column-end: 3;
+
+
     }
 
     #image img {
-        width: 300px;
+        width: 320px;
+        margin-left: -338px;
     }
 
     /* for main content 2 */
     #mainContent2 {
-        grid-column-start: 1;
-        grid-column-end: 2;
-        width: 300px;
 
         grid-row-start: 3;
         grid-row-end: 4;
+
+        grid-column-end: 1;
+        grid-column-end: 3;
+
+        width: 340px;
+
+        margin-left: -84px;
     }
 
     #mainContent2 table {
-        margin-left: -10px;
-    }
-
-}
-
-
-
-/* for Tab view (width-850px) responsive site code starts here */
-
-
-@media screen and (max-width: 850px) {
-
-    body {
-        overflow-x: hidden;
-        box-sizing: border-box;
-
-    }
-
-    .container {
-        grid-template-columns: 50% 50%;
-        width: 100%;
-        box-sizing: border-box;
-        padding-right: 15px;
-
-
-
-        transition-duration: 1s;
-        /* overflow-x: hidden; */
-
-
-    }
-
-    /* for left side bar */
-    #sideBar {
-
-        grid-column-start: 1;
-        grid-column-end: 2;
-
-        grid-row-start: 1;
-        grid-row-end: 2;
-
-        height: 100%;
-    }
-
-    /* for main content 1 */
-    #mainContent1 {
-
-        display: grid;
-
-        grid-template-columns: 100% 100%;
-
-        grid-column-start: 2;
-        grid-column-end: 3;
-
-
-        /* grid-row-start: 2;
-        grid-row-end: 3; */
-    }
-
-    #text {
-
-        grid-column-start: 1;
-        grid-column-end: 3;
-        grid-row-gap: 50px;
-
-        width: 320px;
-
-    }
-
-    #text #heading {}
-
-    #aboutIronMan {}
-
-    #btn_1st_content {}
-
-    #image {
-
-        grid-row-start: 2;
-        grid-row-end: 2;
-
-        grid-column-start: 1;
-        grid-column-end: 3;
-
-        width: 320px;
-    }
-
-    #image img {
-
-        width: 300px;
-        margin-right: -45px;
-    }
-
-    /* for main content 2 */
-    #mainContent2 {
-
-        grid-row-start: 2;
-        grid-row-end: 3;
-
-        grid-column-start: 1;
-        grid-column-end: 3;
-    }
-
-    #mainContent2 table {
+        margin-top: -10px;
         margin-left: -10px;
     }
 
